<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Tedo Manvelidze(ted3x) on 2/9/22, 1:44 AM
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 2/9/22, 1:44 AM
  -->

<resources>
    <string name="sign_in_welcome_back">👋 Welcome back!</string>
    <string name="sign_in_sign_into_revolt">Sign into Revolt</string>
    <string name="sign_in_enter_your_email">Enter your email.</string>
    <string name="sign_in_email">EMAIL</string>
    <string name="sign_in_password">PASSWORD</string>
    <string name="sign_in_enter_your_password">Enter your password.</string>
    <string name="sign_in_login">Login</string>
    <string name="sign_in_new_to_revolt_create_a_new_account">New to revolt? Create a new account</string>
    <string name="sign_in_forgot_your_password_reset_password">Forgot your password? Reset password</string>
    <string name="sign_in_too_short">Too short</string>
    <string name="sign_in_too_long">Too Long</string>
    <string name="sign_in_invalid_email">Invalid email</string>
</resources>